--- a/src/components/Adding/Adding.css
+++ b/src/components/Adding/Adding.css
@@ -1,12 +1,18 @@
+.form-container{
+    padding-left: 20%;
+}
 .form {
-    background-color: #ffebb5;
+    width:  80%;
+    background-color: #f2c4ff;
     border: 1px solid #7a7a7a;
     border-radius: 5px;
-    padding: 20px;
+    padding-top: 15px;
+    padding-bottom:  18px;
     box-shadow: 3px 4.5px #7a7a7a62;
     margin-top: 20px;
-    justify-content: left;
+    justify-content: center;
     position: relative;
+    padding-left: 20px;
   }
   
   .form h2 {
@@ -20,7 +26,7 @@
   }
   
   .form input {
-    width: 70%;
+    width: 80%;
     padding: 8px;
     border: 1px solid #b1aca300;
     border-radius: 3px;
@@ -39,13 +45,15 @@
   .plus-icon{
     width: 100%;
     justify-content: center;
+    position: relative;
+    padding-top: 20px;
 
   }
   .➕{
-    position: relative;
+    left: 35%;
+    text-align: center;
+    position: absolute;
     justify-content: center;
-    width: 75%;
-    margin: 5px;
-    
+    width: 45%;
   }
   
