--- a/src/components/todobox/todobox.css
+++ b/src/components/todobox/todobox.css
@@ -3,11 +3,13 @@
     width: 100%;
     text-align: center;
     border-bottom: 1.5px solid black;
+    border-right: 1.5px solid black;
     padding-top: 20px;
     display: flex;
     height: 70px;
     padding-left: 5%;
-    padding-bottom: 20px;
+    padding-bottom: 5px;
+    padding-right: 15px;
 }
 input[type="checkbox"] {
     padding-top: 50%;
